--- a/front/client/app/main/main.css
+++ b/front/client/app/main/main.css
@@ -13,13 +13,44 @@
     letter-spacing: -1px;
 }
 
+#freebar{
+
+position: relative;
+width:100%;
+height:50px;
+background-color: black;
+
+
+}
+
+#blacknav{
+
+    background-color: black;
+    width:100%;
+    color: white;
+    font-weight: bold;
+}
+
+#freelo{
+
+position: relative;
+width:100%;
+height:100px;
+background-color: white;
+
+
+}
+
+
+
+
 .hero-unit {
     position: relative;
     padding: 30px 15px;
     color: #F5F5F5;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    background: #4393B9;
+    background: black;
 }
 
 .footer {
